# LREC2024_renard

./: .projectile  README.md  characters_extraction.py  ner.py  pyproject.toml  requirements.txt  scratch.py  xp_character_unification.py  xp_character_unification.sh  xp_characters_extraction.py  xp_characters_extraction.sh  xp_coref.py  xp_coref.sh  xp_ner.py  xp_ner.sh  xp_network_extraction.py  xp_network_extraction.sh  xp_speaker_attribution.py  xp_speaker_attribution.sh
data/ner/: convert_from_conivel_to_csv.py  test.csv  train.csv
renard_lrec2024/: character_unification.py  characters_extraction.py  network_extraction.py  utils.py
