[tool.poetry]
name = "renard-lrec2024"
version = "0.0.0"
description = ""
authors = ["Aethor <oow.autre@gmail.com>"]
readme = "README.md"
packages = [{include = "renard_lrec2024"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
sacred = "^0.8.4"
renard-pipeline = { git = "https://github.com/CompNet/Renard", rev = "1ed3bbd" }
tibert = { git = "https://github.com/CompNet/Tibert", rev = "95ac76d" }
datasets = "^2.14.5"
accelerate = "^0.23.0"
rich = "^13.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
