[tool.poetry]
name = "renard-lrec2024"
version = "0.0.0"
description = ""
authors = ["Aethor <oow.autre@gmail.com>"]
readme = "README.md"
packages = [{include = "renard_lrec2024"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
sacred = "^0.8.4"
renard-pipeline = { git = "https://github.com/CompNet/Renard", rev = "e77529c" }
tibert = { git = "https://github.com/CompNet/Tibert", rev = "9033244" }
grimbert = { git = "https://github.com/CompNet/Grimbert", rev = "29753b6" }
datasets = "^2.14.5"
accelerate = "^0.22.0"
rich = "^13.5.2"
torch = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
